# battle_tanks

./: .CMakePresets.json  .gitignore  CMakeLists.txt  README.md  ci.sh  compile.sh  conan_notes.txt  conanfile.txt  coverage.sh  cross_compile_windows.sh  main.cpp  requirements.txt  run.sh  tests.sh  todo.md  valgrind.sh  valgrind.supp  version.rc
source/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cannon.cpp  Cannon.hpp  Config.hpp  Context.cpp  Context.hpp  DrawTools.cpp  DrawTools.hpp  FontLibrary.cpp  FontLibrary.hpp  Math.cpp  Math.hpp  Navigator.hpp  Particles.cpp  Particles.hpp  Tank.cpp  Tank.hpp  TankFactory.cpp  TextureLibrary.cpp  TextureLibrary.hpp  Tilemap.hpp
source/bios_demo/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
source/calculator_demo/: Application.cpp  Application.hpp  CMakeLists.txt  Calculator.hpp  main.cpp
source/engine/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  ChunkedRenderTextureLayer.cpp  ChunkedRenderTextureLayer.hpp  Clock.hpp  CollisionSolver.cpp  CollisionSolver.hpp  Concat.hpp  Context.cpp  Context.hpp  FpsCounter.cpp  FpsCounter.hpp  FpsLimiter.cpp  FpsLimiter.hpp  GameObject.cpp  GameObject.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  KeyboardReceiver.cpp  KeyboardReceiver.hpp  Logger.cpp  Logger.hpp  LoggerSink.cpp  LoggerSink.hpp  Options.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Profiler.cpp  Profiler.hpp  ProfilingStorage.cpp  ProfilingStorage.hpp  Renderer.hpp  RigidBody.cpp  (+17 more)
source/engine/input/: KeyboardHandler.cpp  KeyboardHandler.hpp  KeyboardReceiver.cpp  KeyboardReceiver.hpp  KeyboardUtils.cpp  KeyboardUtils.hpp  MouseHandler.cpp  MouseHandler.hpp  MouseReceiver.cpp  MouseReceiver.hpp  TextEnteredReceiver.cpp  TextEnteredReceiver.hpp
source/engine/math/: CMakeLists.txt  Math.cpp  Math.hpp
source/engine/physcis/: BoxCollider.hpp  CircleCollider.hpp  Collider.hpp
source/engine/physics/: Collider.hpp
source/game/: Application.cpp  Application.hpp  Barrel.cpp  Barrel.hpp  BarrelFactory.cpp  BarrelFactory.hpp  BarrelRenderer.cpp  BarrelRenderer.hpp  Bullet.cpp  Bullet.hpp  BulletFactory.cpp  BulletFactory.hpp  BulletRenderer.cpp  BulletRenderer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cannon.cpp  Cannon.hpp  CollisionSolver.cpp  CollisionSolver.hpp  Context.cpp  Context.hpp  Crate.cpp  Crate.hpp  CrateFactory.cpp  CrateFactory.hpp  CrateRenderer.cpp  CrateRenderer.hpp  FpsCounter.cpp  FpsCounter.hpp  FpsLimiter.cpp  FpsLimiter.hpp  GameObject.cpp  GameObject.hpp  HelpWindow.hpp  IRenderable.hpp  InstanceIdGenerator.cpp  InstanceIdGenerator.hpp  MouseController.cpp  (+24 more)
source/game/entity/: TracksRenderer.cpp  TracksRenderer.hpp
source/game/lua/: ScriptContext.cpp  ScriptContext.hpp  ScriptsScheduler.cpp  ScriptsScheduler.hpp  WaitCondition.cpp  WaitCondition.hpp
source/game/particle/: Explosion.cpp  Explosion.hpp  Say.cpp  Say.hpp
source/game/particles/: Explosion.cpp  Explosion.hpp
source/game/scripts/: blink.lua  navigator.lua  tank_demo.lua  turtle.lua
source/graphics/: CMakeLists.txt  DrawTools.cpp  DrawTools.hpp  FontLibrary.cpp  FontLibrary.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Particles.cpp  Particles.hpp  TextureLibrary.cpp  TextureLibrary.hpp  Tilemap.cpp  Tilemap.hpp
source/gui/: Alignment.cpp  Alignment.hpp  Application.cpp  Application.hpp  BaseEditBox.cpp  BaseEditBox.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Checkbox.cpp  Checkbox.hpp  Clipboard.cpp  Clipboard.hpp  ClosableWindow.cpp  ClosableWindow.hpp  Component.cpp  Component.hpp  ContextMenu.cpp  ContextMenu.hpp  Debug.cpp  Debug.hpp  DimensionConstraintScaler.cpp  DimensionConstraintScaler.hpp  EditBox.cpp  EditBox.hpp  Element.hpp  Event.hpp  EventReceiver.cpp  EventReceiver.hpp  FontHeightCache.cpp  FontHeightCache.hpp  FontLibrary.cpp  FontLibrary.hpp  FramedSprite.cpp  FramedSprite.hpp  GUI.cpp  GUI.hpp  GroupBox.cpp  GroupBox.hpp  GuiController.cpp  (+49 more)
source/gui/debug/: ComponentTree.cpp  ComponentTree.hpp
source/gui/keyboard/: Utils.cpp  Utils.hpp
source/gui/layout/: Base.cpp  Base.hpp  Constraint.cpp  Constraint.hpp  DimensionConstraintScaler.cpp  DimensionConstraintScaler.hpp  Grid.cpp  Grid.hpp  Horizontal.cpp  Horizontal.hpp  Inset.cpp  Inset.hpp  SizeConstraint.cpp  SizeConstraint.hpp  SizeConstraintResolver.cpp  SizeConstraintResolver.hpp  Vertical.cpp  Vertical.hpp
source/gui/scrollbar/: Base.cpp  Base.hpp  Horizontal.cpp  Horizontal.hpp  Vertical.cpp  Vertical.hpp
source/gui/slider/: Base.hpp  Constants.hpp  Horizontal.cpp  Horizontal.hpp  HorizontalMousePolicy.cpp  HorizontalMousePolicy.hpp  HorizontalThick.cpp  HorizontalThick.hpp  HorizontalThickRenderingPolicy.cpp  HorizontalThickRenderingPolicy.hpp  HorizontalThinRenderingPolicy.cpp  HorizontalThinRenderingPolicy.hpp  LayoutBuilder.cpp  LayoutBuilder.hpp  Vertical.cpp  Vertical.hpp  VerticalMousePolicy.cpp  VerticalMousePolicy.hpp  VerticalThick.cpp  (+5 more)
source/gui_sandbox/: Application.cpp  Application.hpp  CMakeLists.txt  MouseController.cpp  MouseController.hpp  main.cpp
source/lua_experiments/: CMakeLists.txt  Notes.md  ScriptContext.hpp  ScriptScheduler.hpp  TankSimulator.cpp  TankSimulator.hpp  WaitCondition.hpp  main.cpp
source/math/: CMakeLists.txt  Math.cpp  Math.hpp
source/physics_sandbox/: Application.cpp  Application.hpp  Box.hpp  CMakeLists.txt  Circle.hpp  MouseController.hpp  main.cpp
source/physics_sandbox_box2d/: Application.cpp  Application.hpp  CMakeLists.txt  KeyboardController.hpp  MouseController.hpp
tests/: CMakeLists.txt  MathTests.cpp  dummyTest.cpp
tests/engine/: CMakeLists.txt  ClockTests.cpp  ConcatTests.cpp  MathTests.cpp  TimerServiceTests.cpp  TimerTests.cpp
tests/gui/: ButtonTests.cpp  CMakeLists.txt  ComponentTests.cpp  DimensionConstraintScalerTests.cpp  FocusHandlingTests.cpp  WidgetTests.cpp
tests/math/: CMakeLists.txt  MathTests.cpp
tests/mocks/: CMakeLists.txt  ComponentSpy.cpp  ComponentSpy.hpp  WidgetSpy.cpp  WidgetSpy.hpp
(+66 files in other folders)
