add_library(gui_lib STATIC)

target_include_directories(gui_lib
PUBLIC
    ${CMAKE_SOURCE_DIR}/source
)

target_link_libraries(gui_lib
PUBLIC
    engine_lib
)

target_sources(gui_lib
PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/Alignment.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Application.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BaseEditBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Button.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Checkbox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Clipboard.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Component.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/ComponentTree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Debug.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EditBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultiLineEditBox.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EventReceiver.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FontHeightCache.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FontLibrary.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FramedSprite.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/keyboard/Utils.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/KeyboardController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Label.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/Base.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/Constraint.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/Grid.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/Horizontal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/Inset.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/SizeConstraintResolver.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/layout/Vertical.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/Horizontal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/HorizontalMousePolicy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/HorizontalThick.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/HorizontalThickRenderingPolicy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/HorizontalThinRenderingPolicy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/LayoutBuilder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/Vertical.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/VerticalMousePolicy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/VerticalThick.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/VerticalThickRenderingPolicy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/slider/VerticalThinRenderingPolicy.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MouseController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ProgressBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RadioButton.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RadioButtonGroup.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/scrollbar/Base.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/scrollbar/Horizontal.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/scrollbar/Vertical.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Selection.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/StyleSheet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Text.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TextCursor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/TextEnteredController.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/window/Header.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/window/Panel.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/window/StatusBar.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/WindowManager.cpp
)
